<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_cutting"
    android:id="@+id/cutting">

    <!-- Main Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Activity Header -->
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view0"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="true">

            <!-- Activity Header Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/menuitem_green">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/headerIcon"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_menu_cut" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/headerText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/menuItemVideoCutting"
                    android:textColor="#FFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 1 -->
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="top"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="true">

            <!-- Card 1 Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardbackground"
                android:orientation="vertical">

                <!-- Card 1 Header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <!-- Card 1 Header Icon -->
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/inputIcon"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_input" />

                    <!-- Card 1 Header Text -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/inputText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/generalInputFile"
                        android:textSize="16sp" />

                </LinearLayout>

                <!-- Card 1 Input -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/txtFilePath"
                        android:layout_width="270dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:textSize="10dp"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnFileDialog"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_folder" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 2 -->
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="true">

            <!-- Card 2 Content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardbackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/displayFrom"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="From:"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtFrom"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/emptyTimestamp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnFrom"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_clock" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Card 3 -->
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="true">

            <!-- Card 3 Content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardbackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/displayTo"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="To:"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtTo"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/emptyTimestamp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnTo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_clock" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 4 -->
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="top"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="true">

            <!-- Card 4 Layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardbackground"
                android:orientation="vertical">

                <!-- Card 4 Header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <!-- Card 4 Header Icon -->
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/processIcon"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_info" />

                    <!-- Card 4 Header Text -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/processText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/generalInformation"
                        android:textSize="16sp" />

                </LinearLayout>

                <!-- Card 4 Input -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/txtInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/generalInform"
                        android:textAlignment="center" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Card 5 -->
        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="top"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="true">

            <!-- Card 5 Content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardbackground"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCutting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/menuItem_green"
                    android:text="@string/videoCuttingApplyButton" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>